@@ -31,7 +31,7 @@ public class AppUtil {
     public static final String DEFAULT_SORT_BY = "id";
     public static final String DEFAULT_SORT_DIRECTION = "asc";
 
-    public static List<String> allowedOrigins = List.of("http://localhost:3000");
+    public static List<String> allowedOrigins = Arrays.asList("http://localhost:3000", "http://localhost:3001");
     public static List<String> allowedMethods = Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS");
 
     public static List<String> allowedHeaders = Arrays.asList("Authorization", "Content-Type", "Accept", "X-Auth-User-Id",
